# deckard-cli

./: Cargo.toml  README.md  build.rs
.github/workflows/: pr.yaml
docs/: css-classes.md  installation.md  release.md  usage.md
src/: args.rs  constants.rs  html.rs  json_schema.rs  lib.rs  main.rs
src/commands/: convert.rs  mod.rs  upgrade.rs
tests/commands/: mod.rs
tests/commands/convert/: mod.rs
tests/commands/upgrade/: mod.rs
tests/support/: mod.rs
