[package]
name = "deckard"
version = "1.0.1-rc.1"
edition = "2021"
rust-version = "1.74"
description = "Convert schema to minified HTML"
homepage = "https://github.com/peridio/deckard-cli"
repository = "https://github.com/peridio/deckard-cli"
license = "Apache-2.0"

[[bin]]
name = "deckard"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
flate2 = "1.0"
futures-util = "0.3"
indicatif = "0.17"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
thiserror = "1.0"
tokio = { version = "1.38", features = ["rt", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.10"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
